# lab-ip-cpp

./: 01-env-setup.sh  02-make-clean.sh  README.md
draft/algo-example/: CMakeLists.txt
draft/algo-example/include/mylib/: kalman.h
draft/gps-example/opengl-example/opencv.lib/: README.md
draft/gps-example/opengl-example/test/: CMakeLists.txt
draft/opencv-example/: README.md
draft/opencv-example/opencv-example/: CMakeLists.txt_opencv+Eigen  util.sh
draft/opengl-example/: clean_all.sh  run.sh
draft/opengl-example/bak/opengl.lib/: CMakeLists.txt
draft/opengl-example/opencv.lib/: CMakeLists.txt
draft/opengl-example/opengl.lib/: CMakeLists.txt
draft/opengl-example/opengl.lib/include/mylib/: MyPicture.h
draft/opengl-example/opengl.lib/src/mylib/: MyCordXYZ.cpp  MyFPS.cpp
draft/opengl-example/test/: CMakeLists.txt
lab/01.01-helloworld/: 01.run.sh  02.clean.sh  CMakeLists.txt  README.md
lab/01.01-helloworld/src/: CMakeLists.txt  image_utility.h  main.cpp
lab/01.02-camera/: 02-run.sh  README.md
lab/01.02-camera/src/: main.cpp
lab/01.02.01-v4l2-capture-mjpeg-stream-and-decode-show/: 03-clean.sh  CMakeLists.txt
lab/01.02.01-v4l2-capture-mjpeg-stream-and-decode-show/src/: main.cpp
lab/01.02.01-v4l2-write-mjpeg-out-jpeg/: .main.cpp.swp  README.md
lab/01.02.01-v4l2-write-mjpeg-out-jpeg/src/: main.cpp
lab/01.03-qrcode/src/: main.cpp
lab/01.03.01-qrcode-single-qrcode/: 01-build.sh
lab/01.03.01-qrcode-single-qrcode/src/: main.cpp
lab/algo.01.Hungarian/src/: main.cpp
lab/algo.01.Hungarian/v1.0_simple/: CMakeLists.txt
lab/algo.01.Hungarian/v1.2_hungarian/: CMakeLists.txt
lab/algo.01.Hungarian/v1.3_hungarian_simple/: CMakeLists.txt
lab/algo.02.kalman-filter/01.org.1d/: CMakeLists.txt
lab/algo.02.kalman-filter/v1.0-org.1d/: CMakeLists.txt  README.md  result.csv
lab/algo.02.kalman-filter/v1.0-org.1d/bak/: CMakeLists.txt_OpenCV_OpenGL.txt
lab/algo.02.kalman-filter/v1.0-org.1d/src/mylib/: MyPicture.cpp
lab/algo.02.kalman-filter/v1.1-mylib.1d/: CMakeLists.txt  result.csv
lab/algo.02.kalman-filter/v1.2-mylib.1d.simple/: CMakeLists.txt
lab/algo.02.kalman-filter/v1.2-mylib.1d.simple/src/: main.cpp
lab/algo.03.kalman-filter-2d/v1.0-org.2d/: CMakeLists.txt
lab/algo.03.kalman-filter-2d/v1.0-org.2d/src/: main.cpp
lab/algo.03.kalman-filter-2d/v1.0-org.2d/src/mylib/: kalman.cpp
lab/algo.03.kalman-filter-2d/v1.1-mylib/: CMakeLists.txt
lab/algo.03.kalman-filter-2d/v1.2-mylib/: build.sh
lab/c++.01-structure/: CMakeLists.txt
lab/c++.01-structure/include/: main.h
lab/c++.01-structure/src/: main.cpp
lab/file.01.json/: CMakeLists.txt  Readme.md  main.cpp  util.sh
lab/file.01.json/data/: 1.json
lab/gps.01-lla2enu/v1.0_simple/: CMakeLists.txt
lab/gps.01-lla2enu/v1.0_simple/example/: main.cpp
lab/opencv.01.object-detect-video/v1.0_simple/: CMakeLists.txt  result.csv
lab/opencv.01.object-detect-video/v1.0_simple/bak/: CMakeLists.txt.simple
lab/opencv.01.object-detect-video/v1.0_simple/src/: main.cpp
lab/opengl.01-triangle/opengl_v3/: README.md
lab/opengl.01.02-cameraview-fps/example/: build.sh
lab/opengl.01.03-show-png/3d_v1.1_class/: Makefile
lab/opengl.01.03-show-png/3d_v1.1_class_mylib/: README.md
lab/opengl.01.03-show-png/3d_v2.0_shared_customized_size/test/: CMakeLists.txt
lab/opengl.01.03-show-png/3d_v2.0_shared_customized_size/test/src/: main.cpp
lab/opengl.01.03-show-png/v2.1_3d_class/: CMakeCache.txt  OpenGLDemo  cmake_install.cmake
lab/opengl.01.04-two-triangle-static-moving/v1.0-org/: CMakeLists.txt
lab/opengl.01.05-moving-picture-fps/v1.0-org/: clean.sh
lab/opengl.01.06-moving-8-pic/v1.1_class_mylib/: CMakeLists.txt
lab/opengl.01.06-moving-8-pic/v1.2_move_along_z_45deree/: CMakeLists.txt
lab/opengl.01.06-moving-8-pic/v1.2_move_along_z_45deree/include/mylib/: MyPicture.h  mylib.h
lab/opengl.01.06-moving-8-pic/v1.2_move_along_z_45deree/src/: main.cpp
lab/opengl.01.06-moving-8-pic/v1.2_move_along_z_45deree/src/mylib/: MyPicture.cpp  mylib.cpp
lab/opengl.01.06-moving-8-picture-fps-module/opengl_v3/: build.sh
lab/opengl.01.07-show-origin-xyz-axes/v2.2-class-fps-mylib/: CMakeLists.txt
lab/opengl.01.07-show-origin-xyz-axes/v2.4-windowsize-close-fps-class/: CMakeLists.txt
lab/opengl.01.07-show-origin-xyz-axes/v2.4.1-windowsize-close-fps-class/: README.md
lab/opengl.01.09-loadpicture-opencv/: CMakeLists.txt
lab/opengl.01.09-loadpicture-opencv/src/: main.cpp  main.cpp.3d.moving.object-ok.cpp
lab/opengl.01.10-opencv-drawtext-SLOW/: CMakeLists.txt  build.sh  util.sh
lab/opengl.01.10-opencv-drawtext-SLOW/include/mylib/: MyPicture.h
lab/opengl.01.10-opencv-drawtext-SLOW/src/: glad.c  main.cpp
lab/opengl.01.10-opencv-drawtext-SLOW/src/mylib/: MyPictureCV.cpp  mylibopencv.cpp
lab/opengl.01.10-opencv-drawtext-SLOW/v1.0/: CMakeLists.txt  clean.sh
lab/opengl.01.10-opencv-drawtext-SLOW/v2.0_sharedlibrary/: build_all.sh  clean_all.sh
lab/opengl.01.10-opencv-drawtext-SLOW/v2.0_sharedlibrary/bak/opencv.lib/src/mylib/: mylibopengl.cpp  mylibopengl_opencv.cpp
lab/opengl.01.10-opencv-drawtext-SLOW/v2.0_sharedlibrary/bak/opengl.lib/: util.sh
lab/opengl.01.10-opencv-drawtext-SLOW/v2.0_sharedlibrary/bak/opengl.lib/include/mylib/: mylibopengl_opencv.h
lab/opengl.01.10-opencv-drawtext-SLOW/v2.0_sharedlibrary/bak/opengl_opencv.lib/include/mylib/: mylibopengl.h
lab/opengl.01.10-opencv-drawtext-SLOW/v2.0_sharedlibrary/bak/opengl_opencv.lib/src/mylib/: MyPictureCV.cpp
lab/opengl.01.10-opencv-drawtext-SLOW/v2.0_sharedlibrary/opencv.lib/: CMakeLists.txt  deploy.sh
lab/opengl.01.10-opencv-drawtext-SLOW/v2.0_sharedlibrary/opengl_opencv.lib/: CMakeLists.txt  build.sh  deploy.sh
lab/opengl.01.10-opencv-drawtext-SLOW/v2.0_sharedlibrary/test/: clean.sh
lab/opengl.01.10-opencv-drawtext-SLOW/v2.0_sharedlibrary/test/include/mylib/: MyPictureCV.h
lab/physx.01-demo/: CMakeLists.txt
lab/physx.01-demo/src/: main.cpp
lab/utility/bash/: 99-util.sh
lab/utility/include/: image_util.h  image_utility.h  test_util.h
lab/utility/src/: image_util.cpp  image_utility.cpp  test_util.cpp
(+109 files in other folders)
